Add Firebase configuration and setup for hosting
- Created .firebaserc and firebase.json for Firebase project configuration.
- Updated angular.json to include Firebase analytics.
- Added Firebase SDK to public/index.html for hosting.
- Implemented Firebase initialization in app-routing.module.ts.
- Created GitHub Actions workflows for automatic deployment on merge and pull requests.
- Updated package.json and package-lock.json to include Firebase dependencies.
- Added firebase.config.ts for Firebase configuration management.

--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "7a6587df-f023-4bb5-bb5b-48e058f9944f"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
